Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-130133

ios QFileDialog crash

XMLWordPrintable

    • iOS/tvOS/watchOS
    • 2083daf79 (dev), dc885e39c (6.8)

      On iOS, calling QFileDialog::getOpenFileName hits an assert:

      ASSERT failure in QFileDialog: "Called object is not of the correct type (class destructor may have already run)", file /Users/qt/work/qt/qtbase/src/corelib/kernel/qobjectdefs_impl.h, line 131

      The same problem occurs when you don't use the static members, but you try to call dialog->deleteLater().

      The only way it works is to not use the static members and not call deleteLater().

      You can test with the annexed project: I created 3 buttons to open the QFileDialog in 3 different ways, all of them work fine on qt 6.5.6 for ios, not on 6.8.0.

        1. QtBugsFileDialog.zip
          13 kB
          José Del Romano
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tpochep Timur Pocheptsov
            jozzolo José Del Romano
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes